Added energy graph

--- a/MonteCarlo.vcxproj
+++ b/MonteCarlo.vcxproj
@@ -185,6 +185,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Drawer2D.h" />
+    <ClInclude Include="DrawGraph.h" />
     <ClInclude Include="MonteCarlo.h" />
     <ClInclude Include="MonteCarloDlg.h" />
     <ClInclude Include="Resource.h" />
@@ -193,6 +194,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Drawer2D.cpp" />
+    <ClCompile Include="DrawGraph.cpp" />
     <ClCompile Include="MonteCarlo.cpp" />
     <ClCompile Include="MonteCarloDlg.cpp" />
     <ClCompile Include="stdafx.cpp">
