--- a/MonteCarlo.vcxproj
+++ b/MonteCarlo.vcxproj
@@ -186,6 +186,7 @@
   <ItemGroup>
     <ClInclude Include="Drawer2D.h" />
     <ClInclude Include="DrawGraph.h" />
+    <ClInclude Include="DrawGraph2.h" />
     <ClInclude Include="MonteCarlo.h" />
     <ClInclude Include="MonteCarloDlg.h" />
     <ClInclude Include="Resource.h" />
@@ -195,6 +196,7 @@
   <ItemGroup>
     <ClCompile Include="Drawer2D.cpp" />
     <ClCompile Include="DrawGraph.cpp" />
+    <ClCompile Include="DrawGraph2.cpp" />
     <ClCompile Include="MonteCarlo.cpp" />
     <ClCompile Include="MonteCarloDlg.cpp" />
     <ClCompile Include="stdafx.cpp">
